@@ -28,10 +28,6 @@
 - Misc
   - Complete WebApp support
     - Handle back button (navigate back in browse)
-  - Virtual libraries
-    - Get list via: ["",["libraries", 0, 100]]
-    - Add selection (if any present) to settings dialog, and set vuex/cookie with id
-    - Replace "My Music" with library name
   - Group management
     - Add create/delete/edit/list to JSON API in Groups plugin itself.
       ["groupmac", ["playergroup", 0, 100]] lists group details
